--- a/src/config/settings.yaml
+++ b/src/config/settings.yaml
@@ -3,11 +3,11 @@
 # https://gethomepage.dev/latest/configs/settings
 
 title: Epichouse Homelab
-background: 
-  image: /images/background.jpg
-  blur: sm
-  brightness: 10
-  opacity: 40
+#background: 
+#  image: /images/background.jpg
+#  blur: sm
+#  brightness: 10
+#  opacity: 40
 #  saturate: 50
 
 headerStyle: clean
