Added initially collapsed setting

--- a/src/config/settings.yaml
+++ b/src/config/settings.yaml
@@ -29,8 +29,9 @@ layout:
   Services:
     style: column
 
+groupsInitiallyCollapsed: true
 useEqualHeights: true
-disableCollapse: true
+#disableCollapse: true
 theme: dark
 color: black
 #
