--- a/src/config/settings.yaml
+++ b/src/config/settings.yaml
@@ -28,10 +28,13 @@ layout:
     style: column
   Productivity Tools:
     style: column
-  Manchester Infrastructure:
-    style: row
   London Infrastructure:
     style: row
+    columns: 3
+  Manchester Infrastructure:
+    style: row
+    columns: 3
+
 #groupsInitiallyCollapsed: true
 useEqualHeights: true
 disableCollapse: true
