Added initial homelab services

--- a/src/conf.yml
+++ b/src/conf.yml
@@ -81,3 +81,42 @@ sections:
     icon: hl-azure-devops
     url: https://dev.azure.com/EpichouseCloud/DS/_build
     target: newtab
+
+- name: Homelab Services
+  icon: fas fa-flask-vial
+  items:
+  - title: Gitea
+    description: My self hosted git server.
+    icon: hl-gitea
+    url: https://gitea.prod.epichouse.co.uk/
+    target: newtab
+  - title: Passbolt
+    description: My self hosted password manager.
+    icon: hl-passbolt
+    url: https://passbolt.prod.epichouse.co.uk/
+    target: newtab
+  - title: Netbox
+    description: My self hosted IPAM solution.
+    icon: hl-netbox
+    url: https://netbox.prod.epichouse.co.uk/
+    target: newtab
+  - title: Bookstack
+    description: My self hosted documentation solution.
+    icon: hl-bookstack
+    url: https://docs.prod.epichouse.co.uk/
+    target: newtab
+  - title: Uptime Kuma
+    description: My self hosted monitoring solution.
+    icon: hl-uptime-kuma
+    url: https://uptimekuma.prod.epichouse.co.uk/
+    target: newtab
+  - title: qBittorrent
+    description: My self hosted bittorrent solution.
+    icon: hl-qbittorrent
+    url: https://qbittorrent.prod.epichouse.co.uk/
+    target: newtab
+  - title: Graylog
+    description: My self hosted logging solution.
+    icon: hl-graylog
+    url: https://graylog.prod.epichouse.co.uk/
+    target: newtab
