--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,6 +6,9 @@ on:
       - '**/README.md'
 jobs:
   development:
+    permissions:
+      contents: read
+      packages: write
     if: github.ref == 'refs/heads/dev'
     uses: epichouse/workflowtemplates/.github/workflows/docker-build.yaml@main
     with:
@@ -19,6 +22,9 @@ jobs:
       server_username: ${{ secrets.server_username }}
       GITHUB_TOKEN1: ${{ secrets.GITHUB_TOKEN }}
   production:
+    permissions:
+      contents: read
+      packages: write
     if: github.ref == 'refs/heads/main'
     uses: epichouse/workflowtemplates/.github/workflows/docker-build.yaml@main
     with:
