Added requirment for dev stage to run before prod in prod deployment

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -18,6 +18,7 @@ jobs:
     secrets:
       server_username: ${{ secrets.server_username }}
   production:
+    needs: development
     permissions:
       contents: read
       packages: write
