--- a/src/conf.yml
+++ b/src/conf.yml
@@ -2,7 +2,7 @@
 # Page meta info, like heading, footer text and nav links
 pageInfo:
   title: Dashy
-  description: Welcome to your new dashboard!
+  description: Welcome to the epichouse dashy dashboard!
 
 # Optional app settings and configuration
 appConfig:
